# ArtCade_Editor_RmlUi

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
demo-assets/: README.md
docs/: ADR-0001-tilemap-ownership.md  ADR-0002-script-editor-authority.md  ADR-0003-camera-target-authority.md  ADR-0004-logic-key-binding-editor.md  ADR-0005-top-down-logic-input.md  ADR-0006-logic-rule-card-duplication.md  ADR-0007-layer-manager-render-order-help.md  ADR-0008-stable-workspace-mode-navigation.md  ADR-0009-sprite-presentation-unification.md  ADR-0010-sprite-animation-sheet-materialization.md  ADR-0011-platformer-timing-climb-fields.md  (+30 more)
src/: CMakeLists.txt
src/editor-native/: CMakeLists.txt
src/editor-native/app/: asset_import.cpp  asset_import.h  checker_pattern.cpp  checker_pattern.h  command_stack.h  confirm_dialog.cpp  confirm_dialog.h  editor_app.cpp  editor_app.h  editor_command_side_effect.h  editor_coordinator.cpp  editor_coordinator.h  editor_coordinator_tilemap.cpp  editor_coordinator_ui.cpp  editor_coordinator_workspace.cpp  editor_input.cpp  editor_input.h  file_dialog.cpp  file_dialog.h  generated_sfx_generation_preflight.cpp  generated_sfx_generation_preflight.h  generated_sfx_generation_service.cpp  generated_sfx_generation_service.h  generated_sfx_output_transaction.cpp  generated_sfx_output_transaction.h  generated_sfx_status_projection.cpp  generated_sfx_status_projection.h  hierarchy_actions.cpp  hierarchy_actions.h  input_routing.h  inspector_actions.cpp  inspector_actions.h  inspector_commit.cpp  inspector_commit.h  instance_name_policy.cpp  instance_name_policy.h  main.cpp  new_project_transaction.cpp  new_project_transaction.h  pending_edit.cpp  (+40 more)
src/editor-native/app/export/: export_application_service.cpp  export_application_service.h  export_transaction.cpp  export_transaction.h  export_types.cpp  export_types.h  project_pack_service.cpp  project_pack_service.h  runtime_project_preflight.cpp  runtime_project_preflight.h  runtime_template_catalog.cpp  runtime_template_catalog.h
src/editor-native/commands/: audio_asset_commands.cpp  audio_asset_commands.h  auto_destroy_commands.cpp  auto_destroy_commands.h  box_collider_commands.cpp  box_collider_commands.h  camera_target_commands.cpp  camera_target_commands.h  domain_change.h  editor_command.h  editor_intent.h  editor_invalidation.h  editor_operation_result.h  entity_commands.cpp  entity_commands.h  font_asset_commands.cpp  font_asset_commands.h  generated_sfx_commands.cpp  generated_sfx_commands.h  generated_sfx_macros.cpp  generated_sfx_macros.h  global_variable_commands.cpp  global_variable_commands.h  image_asset_commands.cpp  image_asset_commands.h  linear_mover_commands.cpp  linear_mover_commands.h  logic_board_commands.cpp  logic_board_commands.h  platformer_controller_commands.cpp  platformer_controller_commands.h  project_commands.cpp  project_commands.h  scene_commands.cpp  scene_commands.h  scene_layer_commands.cpp  scene_layer_commands.h  script_asset_commands.cpp  script_asset_commands.h  script_attachment_commands.cpp  (+14 more)
src/editor-native/model/: authored_transform.cpp  authored_transform.h  box_collider_geometry.cpp  box_collider_geometry.h  box_collider_view.cpp  box_collider_view.h  editor_state.h  editor_ui_state.h  generated_sfx_policy.cpp  generated_sfx_policy.h  generated_sfx_preset_catalog.cpp  generated_sfx_preset_catalog.h  logic_component_references.cpp  logic_component_references.h  numeric_validation.h  path_confinement.cpp  path_confinement.h  play_session.cpp  play_session.h  play_sound_preload.cpp  play_sound_preload.h  project_defaults.h  project_document.cpp  project_document.h  project_io.cpp  project_io.h  scene_frame_snapshot.cpp  scene_frame_snapshot.h  scene_viewport_presets.h  script_editor_state.cpp  script_editor_state.h  script_language_service.cpp  script_language_service.h  script_source_stamp.h  script_text_ops.cpp  script_text_ops.h  selection_state.h  sprite_animation_references.cpp  sprite_animation_references.h  sprite_animation_slicing.cpp  (+29 more)
src/editor-native/resources/export-templates/windows-x64/: README.md  runtime-template.json
src/editor-native/resources/ui/: checker-8.tga  controls.rcss  editor_shell.rml  layout.rcss  logic_board.rcss  panels.rcss  script_editor.rcss  sfx_editor.rcss  theme.rcss
src/editor-native/resources/ui/sprite-animation/: sprite_animation_editor.rcss  sprite_animation_editor.rml
src/editor-native/resources/ui/tileset/: tileset_editor.rcss  tileset_editor.rml
src/editor-native/ui/: assets_panel.cpp  assets_panel.h  console_panel.cpp  console_panel.h  editor_fonts.cpp  editor_fonts.h  editor_ui.cpp  editor_ui.h  generated_sfx_editor_controller.cpp  generated_sfx_editor_controller.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  logic_board_editor_controller.cpp  logic_board_editor_controller.h  logic_board_panel.cpp  logic_board_panel.h  logic_property_editor.cpp  logic_property_editor.h  script_editor_controller.cpp  script_editor_controller.h  sprite_animation_editor_controller.cpp  sprite_animation_editor_controller.h  tile_palette_dock_panel.cpp  tile_palette_dock_panel.h  tileset_editor_controller.cpp  tileset_editor_controller.h  ui_markup.cpp  ui_markup.h
src/editor-native/view/: canvas_font.cpp  canvas_font.h  scene_grid.cpp  scene_grid.h  scene_view.cpp  scene_view.h  scene_view_camera.cpp  scene_view_camera.h  texture_cache.cpp  texture_cache.h  texture_request_catalog.cpp  texture_request_catalog.h  tilemap_paint_overlay.cpp  tilemap_paint_overlay.h  tileset_empty_tiles.cpp  tileset_empty_tiles.h
tests/: CMakeLists.txt  editor-core-test.cpp  editor_core_test_harness.cpp  editor_core_test_harness.h  export-foundation-test.cpp  generated-sfx-editor-controller-test.cpp  generated-sfx-generation-service-test.cpp  generated-sfx-model-test.cpp  logic-board-editor-test.cpp  play-sound-preload-test.cpp  script-api-catalog-test.cpp  script-asset-test.cpp  script-delete-disk-test.cpp  script-text-ops-test.cpp  sprite-animation-test.cpp  tileset-tilemap-test.cpp
(+6 files in other folders)
